--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,31 @@
 
-        
-* {
+  html{
+	box-sizing:border-box;
+}
+*,
+*::before, 
+*::after{
+	box-sizing: inherit;
+} 
+body {
     margin: 0;
     padding: 0;
-    box-sizing: content-box;
-}
+    color: rgba(98, 98, 98, 255);
+    font-family: 'Playfair Display', serif;
+} 
+
+
+.img {
+    display: block;
+    max-width: 100%;
+    height: auto;
+    margin-bottom: 32px;
+  }
 
 .wrapper {
     width: 900px;
     margin: 0 auto;
-    color: rgba(98, 98, 98, 255);
-    font-family: 'Playfair Display', serif;
+    
 }
 .header {
     margin: 0 auto;
@@ -19,15 +34,40 @@
     padding-top: 77px;
     padding-bottom: 102px;
 }
-.main {
+.content {
     margin-bottom: 58px;
+}
+.content-list { 
+    margin: 0 auto;
+    padding: 0;
+}
+.content-item {
+    display: inline-block;
+    width: 420px;
+  }
+  
+.content-item:not(:nth-child(2n)){
+    margin-right: 56px;
+  }
+.content-item:nth-child(even){
+    margin-bottom: 132px;
+  }
+  .content-item:last-child{
+    margin-bottom: 0px;
+  }
+.section-image{
+    margin-bottom: 32px;
+  }
+h2 {
+    margin: 0 ; 
+    margin-bottom: 29px; 
+    font-size: 22px; 
 }
 .links {
     font-size: 0;
 }
 .links li {
     display: inline-block;
-    width: 18%;
     text-align: center;
     text-transform: uppercase;
     font-family: 'Playfair Display', serif;
@@ -42,6 +82,17 @@
 .links a:hover {
     color: rgb(104, 214, 248);
 }
+.links li:nth-child(1) {
+    margin-right: 122px;
+  }
+  
+.links li:nth-child(2) {
+    margin-right: 103px;
+  }
+  
+.links li:nth-child(3) {
+    margin-right: 95px;
+  }   
 
 .lorem-p {
     width: 420px;
@@ -49,33 +100,15 @@
     line-height: 25px;
 } 
 .main-p {
-    height: 45px;
     font-family: 'Roboto', sans-serif;
     text-transform: uppercase;
     font-size: 14px;
+    margin-bottom: 30px;
 }
-.container img {
-    margin-bottom: 28px;
-}
-.container h2 {
-    margin-bottom: 37px;
-}
-.container article {
-    display: inline-block;
-    width: 420px;
 
-}
-.container article:nth-child(1) {
-   margin-right: 56px;
-  }
-  .container:nth-child(1) {
-    margin-bottom: 132px;
-   }
-   .container:nth-child(2) {
-    margin-bottom: 132px;
-   }
+
 .footer {
-    height: 187px;
+    padding-bottom: 70px;
 
   }
   .button {
