--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 *::after{
 	box-sizing: inherit;
 } 
-body {
+.wrapper {
     width: 900px;
     margin: 0 auto;
     padding: 0;
@@ -61,6 +61,7 @@ h2 {
 }
 .links {
     font-size: 0;
+    padding: 0;
 }
 .links li {
     display: inline-block;
@@ -91,7 +92,7 @@ h2 {
   }   
 
 .lorem-p {
-    width: 420px;
+    margin: 0;
     font-size: 14px;
     line-height: 25px;
 } 
@@ -99,13 +100,13 @@ h2 {
     font-family: 'Roboto', sans-serif;
     text-transform: uppercase;
     font-size: 14px;
+    margin: 0;
     margin-bottom: 30px;
 }
 
 
-.footer {
-    padding-bottom: 70px;
-
+.container {
+    margin-bottom: 58px;
   }
   .button {
     display: block;
